--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php" : ">=5.5",
         "respect/relational": "^0.8.0",
-        "ocramius/generated-hydrator": "1.1.0"
+        "ocramius/generated-hydrator": "1.1.0",
+        "jbroadway/urlify": "1.0.3-stable"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
